--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,25 @@ body {
   margin-top: 0;
 }
 
+a {
+  position: relative;
+}
+
+a::before {
+  content: ' ';
+  position: absolute;
+  bottom: -10px;
+  width: 100%;
+  height: 2px;
+  background-color: var(--white);
+  transform: rotateY(90deg);
+  transition: all .5s;
+}
+
+a:hover::before {
+  transform: rotateY(0deg);
+}
+
 /* Fonts & Colors */
 
 body {
